# Sea_Battle

./: CMakeLists.txt  LICENSE  main.cpp  main_tsan.cpp  test.cpp
DTO/: CMakeLists.txt  MissionDTO.hpp  PirateBaseDTO.hpp  ShipDTO.hpp  WeaponDTO.hpp
auxiliary/: CMakeLists.txt  Military.hpp  PirateBase.hpp  PlaceForWeapon.hpp  Vector.hpp
entity/: CMakeLists.txt
entity/ship/: CMakeLists.txt
entity/ship/Abstracts/: DefaultCargo.cpp  DefaultCargo.hpp  DefaultGuard.cpp  DefaultGuard.hpp  DefaultShip.cpp  DefaultShip.hpp
entity/ship/Concrete/: GuardShip.cpp  GuardShip.hpp  TransportShip.cpp  TransportShip.hpp  WarShip.cpp  WarShip.hpp
entity/ship/Factories/: GuardShipFactory.cpp  GuardShipFactory.hpp  IShipFactory.hpp  ShipFactoryManager.cpp  ShipFactoryManager.hpp  TransportShipFactory.cpp  TransportShipFactory.hpp  WarShipFactory.cpp  WarShipFactory.hpp
entity/ship/Interfaces/: ICargo.hpp  IGuard.hpp  IShip.hpp  IShipHealth.hpp  IShipPosition.hpp
entity/weapon/: CMakeLists.txt
entity/weapon/Abstracts/: DefaultWeapon.cpp  DefaultWeapon.hpp
entity/weapon/Concrete/: Gun.cpp  Gun.hpp  Rocket.cpp  Rocket.hpp
entity/weapon/Factories/: GunFactory.cpp  GunFactory.hpp  IWeaponFactory.hpp  RocketFactory.cpp  RocketFactory.hpp  WeaponFactoryManager.cpp  WeaponFactoryManager.hpp
entity/weapon/Interfaces/: IWeapon.hpp
loader/: CMakeLists.txt  Loader.cpp  Loader.hpp  mission.yaml
mapper/: CMakeLists.txt
mapper/mission/: CMakeLists.txt
mapper/mission/FromDTO/: IMissionMapper.hpp  MissionMapper.cpp  MissionMapper.hpp
mapper/mission/ToDTO/: IMissionDTOMapper.hpp  MissionDTOMapper.cpp  MissionDTOMapper.hpp
mapper/pirate_base/: CMakeLists.txt
mapper/pirate_base/FromDTO/: IPirateBaseMapper.hpp  PirateBaseMapper.cpp  PirateBaseMapper.hpp
mapper/pirate_base/ToDTO/: IPirateBaseDTOMapper.hpp  PirateBaseDTOMapper.cpp  PirateBaseDTOMapper.hpp
mapper/ship/: CMakeLists.txt
mapper/ship/FromDTO/: GuardShipMapper.cpp  GuardShipMapper.hpp  IShipMapper.hpp  TransportShipMapper.cpp  TransportShipMapper.hpp  WarShipMapper.cpp  WarShipMapper.hpp
mapper/ship/Managers/: ShipDTOMapperManager.cpp  ShipDTOMapperManager.hpp  ShipMapperManager.cpp  ShipMapperManager.hpp
mapper/ship/ToDTO/: GuardShipDTOMapper.cpp  GuardShipDTOMapper.hpp  IShipDTOMapper.hpp  TransportShipDTOMapper.cpp  TransportShipDTOMapper.hpp  WarShipDTOMapper.cpp  WarShipDTOMapper.hpp
mapper/weapon/: CMakeLists.txt
mapper/weapon/FromDTO/: GunMapper.cpp  GunMapper.hpp  IWeaponMapper.hpp  RocketMapper.cpp  RocketMapper.hpp
mapper/weapon/Managers/: WeaponDTOMapperManager.cpp  WeaponDTOMapperManager.hpp  WeaponMapperManager.cpp  WeaponMapperManager.hpp
mapper/weapon/ToDTO/: GunDTOMapper.cpp  GunDTOMapper.hpp  IWeaponDTOMapper.hpp  RocketDTOMapper.cpp  RocketDTOMapper.hpp
mission/: CMakeLists.txt  Mission.cpp  Mission.hpp
presenter/: CMakeLists.txt  IPresenter.hpp  Presenter.cpp  Presenter.hpp
repository/: CMakeLists.txt  ICRUD.hpp  IShipRepository.hpp  PirateRepository.cpp  PirateRepository.hpp  ShipRepository.cpp  ShipRepository.hpp
service/: CMakeLists.txt
service/ID/: CMakeLists.txt  ShipIDGenerator.cpp  ShipIDGenerator.hpp
service/cargo/: CMakeLists.txt  CargoService.cpp  CargoService.hpp
service/catalog/: CMakeLists.txt
service/catalog/ship/: CMakeLists.txt  ShipCatalog.cpp  ShipCatalog.hpp  ShipTemplate.cpp  ShipTemplate.hpp
service/catalog/weapon/: CMakeLists.txt  WeaponCatalog.cpp  WeaponCatalog.hpp  WeaponTemplate.cpp  WeaponTemplate.hpp
service/combat/: CMakeLists.txt  CombatService.cpp  CombatService.hpp  DamageService.cpp  DamageService.hpp
service/combat/factories/: AttackStrategyFactoryManager.cpp  AttackStrategyFactoryManager.hpp  CMakeLists.txt  ClosestStrategyFactory.cpp  ClosestStrategyFactory.hpp  IAttackStrategyFactory.hpp  RandomStrategyFactory.cpp  RandomStrategyFactory.hpp  StrongestStrategyFactory.cpp  StrongestStrategyFactory.hpp  WeakestStrategyFactory.cpp  WeakestStrategyFactory.hpp
service/combat/strategy/: CMakeLists.txt  ClosestStrategy.cpp  ClosestStrategy.hpp  IAttackStrategy.hpp  RandomStrategy.cpp  RandomStrategy.hpp  StrongestStrategy.cpp  StrongestStrategy.hpp  WeakestStrategy.cpp  WeakestStrategy.hpp
service/movement/: CMakeLists.txt  MovementService.cpp  MovementService.hpp
service/pirate/: CMakeLists.txt  PirateSpawnService.cpp  PirateSpawnService.hpp
service/purchase/: CMakeLists.txt  PurchaseService.cpp  PurchaseService.hpp
service/state/: CMakeLists.txt  IStateService.hpp  YamlStateService.cpp  YamlStateService.hpp
template/: CMakeLists.txt  LookupTable.hpp  MyClass.hpp  TableIterator.hpp  TableNode.hpp
view/: CMakeLists.txt  ViewConsole.cpp  ViewConsole.hpp  saved_game.yaml
visitor/: CMakeLists.txt  IShipVisitor.hpp
visitor/cargo/: CargoInfoVisitor.cpp  CargoInfoVisitor.hpp  CargoLoadVisitor.cpp  CargoLoadVisitor.hpp  CargoRemovalVisitor.cpp  CargoRemovalVisitor.hpp
visitor/place/: HasPlaceWeaponVisitor.cpp  HasPlaceWeaponVisitor.hpp  PlaceForDPSVisitor.cpp  PlaceForDPSVisitor.hpp  PlaceForDamageVisitor.cpp  PlaceForDamageVisitor.hpp
visitor/weapon/: ShipSellVisitor.cpp  ShipSellVisitor.hpp  ShootingVisitor.cpp  ShootingVisitor.hpp  WeaponInstallationVisitor.cpp  WeaponInstallationVisitor.hpp  WeaponRemovalVisitor.cpp  WeaponRemovalVisitor.hpp
